fix blurry icon

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -120,4 +120,5 @@ h3.ui.header {
 h3.ui.header>.icon {
     display: table-cell !important;
     margin: 0 !important;
+    font-size: 28px !important;
 }
